2009-04-03  Mark Ellis  <mark@mpellis.org.uk>

	* specify an IP for SyncMgr to connect to, rather than all
	  interfaces
	* pyrra.pyx - rename __new__to __cinit__

2009-03-19  Mark Ellis  <mark@mpellis.org.uk>

	* add debug level option to conversion tools

2009-03-17  Mark Ellis  <mark@mpellis.org.uk>

	* add codepage parameter to all exported conversion functions,
	  should be the iconv name of the Windows codepage, currently
	  only used in Notes/Description field
	* add VCALENDAR container to VEVENT and VTODO containers
	* fix some compiler warnings
	* add codepage option to all conversion test programs, fix
	  parameter handling and update man pages

2009-03-11  Mark Ellis  <mark@mpellis.org.uk>

	* replace duplicate man pages with links

2009-03-04  Mark Ellis  <mark@mpellis.org.uk>

	* python/Makefile.am - removed explicit link against libpython,
	  not required in an extension

2009-01-10  Mark Ellis  <mark@mpellis.org.uk>

	* 0.13 release

2009-01-08  Mark Ellis  <mark@mpellis.org.uk>

	* some improvements to wstr conversion handling

2008-12-18  Mark Ellis  <mark@mpellis.org.uk>

	* configure.ac.in - require at least python 2.3, pyrex doesn't
	  support 2.2; check pyrex version when python > 2.4

2008-05-23  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* python/pyrra.pyx: Converted x < i < y for loops to the new-style
	syntax and fixed a build-error of using the word "type" as a variable
	name -- this is a reserved Python keyword. (See Debian #482258)

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* man/rra-appointment-from-vevent.1:
	* man/rra-appointment-to-vevent.1:
	* man/rra-contact-from-vcard.1:
	* man/rra-contact-to-vcard.1:
	* man/rra-decode.1:
	* man/rra-delete.1:
	* man/rra-get-data.1:
	* man/rra-get-ids.1:
	* man/rra-get-recurring-appointments.1:
	* man/rra-get-types.1:
	* man/rra-put-data.1:
	* man/rra-subscribe.1:
	* man/rra-task-from-vtodo.1:
	* man/rra-task-to-vtodo.1:
	* man/rra-timezone.1: Escaped minus signs so they're not hyphens.