@@ -20,18 +20,19 @@ static void show_usage(const char* name)
 			"\t                  3 - Errors, warnings and info\n"
 			"\t                  4 - Everything\n"
                         "\t-c CODEPAGE       Codepage to be used for CONTACT_FILE (default CP1252) \n"
+                        "\t-u                Input vCard is UTF8\n"
 			"\tVCARD_FILE        The source vcard filename\n"
 			"\tCONTACT_FILE      The destination contact filename\n",
 			name);
 }
 
-static bool handle_parameters(int argc, char** argv, char** source, char** dest, char** codepage)
+static bool handle_parameters(int argc, char** argv, char** source, char** dest, char** codepage, uint32_t *flags)
 {
 	int c;
 	int path_count;
 	int log_level = SYNCE_LOG_LEVEL_ERROR;
 
-	while ((c = getopt(argc, argv, "d:c:")) != -1)
+	while ((c = getopt(argc, argv, "d:c:u")) != -1)
 	{
 		switch (c)
 		{
@@ -41,6 +42,10 @@ static bool handle_parameters(int argc, char** argv, char** source, char** dest,
 			
 			case 'c':
 				*codepage = optarg;
+				break;
+			
+			case 'u':
+				*flags = *flags | RRA_CONTACT_UTF8;
 				break;
 			
 			case 'h':
@@ -76,9 +81,9 @@ int main(int argc, char** argv)
 	size_t buffer_size = 0;
 	char *source = NULL, *dest = NULL;
 	char *codepage = NULL;
+	uint32_t flags = 0;
 
-
-	if (!handle_parameters(argc, argv, &source, &dest, &codepage))
+	if (!handle_parameters(argc, argv, &source, &dest, &codepage, &flags))
 		goto exit;
 
 	if (!codepage)
@@ -107,7 +112,7 @@ int main(int argc, char** argv)
 			NULL,
 			&buffer,
 			&buffer_size,
-			RRA_CONTACT_NEW | RRA_CONTACT_ISO8859_1,
+			RRA_CONTACT_NEW | flags,
 			codepage))
 	{
 		fprintf(stderr, "Failed to create data\n");
