@@ -1,6 +1,7 @@
 /* $Id$ */
 #include "../lib/task.h"
 #include "../lib/timezone.h"
+#include <errno.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <unistd.h>
@@ -21,18 +22,20 @@ static void show_usage(const char* name)
 			"\t                  3 - Errors, warnings and info\n"
 			"\t                  4 - Everything\n"
                         "\t-c CODEPAGE       Codepage to be used for TASK_FILE (default CP1252)\n"
+                        "\t-u                Output vTodo as UTF8\n"
+                        "\t-t TZFILE         Timezone filename\n"
 			"\tTASK_FILE         The source task filename\n"
 			"\tVTODO_FILE        The destination vtodo filename\n",
 			name);
 }
 
-static bool handle_parameters(int argc, char** argv, char** source, char** dest, char** codepage)
+static bool handle_parameters(int argc, char** argv, char** source, char** dest, char** tzfile, char** codepage, uint32_t *flags)
 {
 	int c;
 	int path_count;
 	int log_level = SYNCE_LOG_LEVEL_ERROR;
 
-	while ((c = getopt(argc, argv, "d:c:")) != -1)
+	while ((c = getopt(argc, argv, "d:c:t:u")) != -1)
 	{
 		switch (c)
 		{
@@ -42,6 +45,14 @@ static bool handle_parameters(int argc, char** argv, char** source, char** dest,
 			
 			case 'c':
 				*codepage = optarg;
+				break;
+
+			case 'u':
+				*flags = *flags | RRA_TASK_UTF8;
+				break;
+
+			case 't':
+				*tzfile = optarg;
 				break;
 
 			case 'h':
@@ -75,10 +86,13 @@ int main(int argc, char** argv)
 	uint8_t* buffer = NULL;
 	long file_size = 0;
 	char* vtodo = NULL;
-	char *source = NULL, *dest = NULL;
+	RRA_Timezone tzi;
+	RRA_Timezone* p_tzi = NULL;
+	char *source = NULL, *dest = NULL, *tzfile = NULL;
 	char *codepage = NULL;
+	uint32_t flags = 0;
 
-	if (!handle_parameters(argc, argv, &source, &dest, &codepage))
+	if (!handle_parameters(argc, argv, &source, &dest, &tzfile, &codepage, &flags))
 		goto exit;
 
 	if (!codepage)
@@ -98,14 +112,42 @@ int main(int argc, char** argv)
 
 	buffer = (uint8_t*)malloc(file_size);
 	fread(buffer, file_size, 1, file);
+        fclose(file);
+
+	if (tzfile)
+	{
+		FILE* file = fopen(tzfile, "r");
+		if (file)
+		{
+			size_t bytes_read = fread(&tzi, 1, sizeof(RRA_Timezone), file);
+			if (sizeof(RRA_Timezone) == bytes_read)
+			{
+				p_tzi = &tzi;
+			}
+			else
+			{
+				fprintf(stderr, "%s: Only read %i bytes from time zone information file '%s': %s\n", 
+					argv[0], (int) bytes_read, tzfile, strerror(errno));
+				goto exit;
+			}
+
+			fclose(file);
+		}
+		else
+		{
+			fprintf(stderr, "%s: Unable to open time zone information file '%s': %s\n", 
+				argv[0], tzfile, strerror(errno));
+			goto exit;
+		}
+	}
 
 	if (!rra_task_to_vtodo(
-			0,
+			RRA_TASK_ID_UNKNOWN,
 			buffer,
 			file_size,
 			&vtodo,
-			RRA_TASK_UTF8,
-			NULL,
+			flags,
+			p_tzi,
 			codepage))
 	{
 		fprintf(stderr, "Failed to create vEvent\n");
